# thor-ui

./: CMakeLists.txt  Makefile  loki
.cache/clangd/index/: main.cpp.FFA9025301A3A43A.idx  manager.cpp.C477F0114AD246C0.idx  manager.hpp.08C1C718B4056C3F.idx
source/: add.cpp  app.hpp  main.cpp  manager.cpp  manager.hpp
